...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnEditWeight"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:textColor="@color/Iowa_State_Red" />
                </LinearLayout>
...
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnEditHeight"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:textColor="@color/Iowa_State_Red" />
                </LinearLayout>
...
