...
                            android:layout_marginHorizontal="24dp"
                            android:text="Track your nutrition goals, share progress, and stay motivated by joining a group. Your personalized meal plan and tracking will be available once you're part of a group."
                            android:textAlignment="center"
                            android:textColor="@color/gray_600"/>

                        <Button
                            android:id="@+id/btnViewGroups"
                            android:layout_width="wrap_content"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:text="View Groups"
                            android:textColor="@color/white"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Group Information"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/btnEnter"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnEnter"
...
